# rafx

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  NOTICE  README.md  deny.toml  example_pipeline.rs  example_pipeline_default.json.pipeline  example_pipeline_kitchen_sink.json.pipeline  example_pipeline_kitchen_sink.ron.pipeline  example_pipeline_sprite.json.pipeline  example_pipeline_sprite.ron.pipeline  hydrate_project.json  pipeline_json_example.json  pipeline_ron_example.ron  render_process.md  rustfmt.toml
demo/: .rafx_project  Cargo.toml
demo-editor/: Cargo.toml
demo-editor/src/: inspectors.rs  main.rs
demo-schema/: Cargo.toml
demo-schema/src/: main.rs
demo-schema/test_out/: rafx_assets.rs
demo-web/: Cargo.toml  README.md  compile_wasm.bat  compile_wasm.sh  index.html
demo-web/pkg/: .gitignore  web.js  web_bg.wasm
demo-web/shaders/: compile_shaders.bat  compile_shaders.sh  shader.frag  shader.frag.gles  shader.vert  shader.vert.gles  shader.vert.gles2
demo-web/src/: lib.rs  main.rs  main_native.rs  main_web.rs
demo/art/: armature.blend  pbr-test.blend
demo/cli/: Cargo.toml
demo/demo-shaders/: Cargo.toml  compile_shaders.bat  compile_shaders.sh  generate_msl.sh
demo/shaders/: Cargo.toml  compile.bat  compile.sh  compile_shaders.bat  compile_shaders.sh  generate_msl.sh  imgui.vert
demo/src/: asset_loader.rs  asset_lookup.rs  asset_resource.rs  asset_storage.rs  components.rs  daemon.rs  daemon_args.rs  demo_plugin.rs  demo_renderer_thread_pool.rs  demo_ui.rs  game_asset_lookup.rs  game_asset_manager.rs  init.rs  legion_support.rs  lib.rs  main.rs  main_native.rs  render_contexts.rs  resource_manager.rs  test_scene.rs  time.rs
rafx/: Cargo.toml
rafx-api/: Cargo.toml  README.md
rafx-api-vulkan-sdl2/: Cargo.toml
rafx-api-vulkan-sdl2/src/: lib.rs
rafx-api/src/: api.rs  buffer.rs  command_buffer.rs  command_pool.rs  descriptor_set_array.rs  device_context.rs  error.rs  fence.rs  lib.rs  pipeline.rs  queue.rs  reflection.rs  render_target.rs  root_signature.rs  sampler.rs  semaphore.rs  shader.rs  shader_module.rs  swapchain.rs  texture.rs
rafx-assets/: Cargo.toml
rafx-assets/schema/: Vec.json  compute_pipeline.json  graphics_pipeline.json  image.json  shader.json
rafx-assets/src/: buffer_upload.rs  decoded_image.rs  gpu_image_data.rs  hydrate_impl.rs  image_upload.rs  image_utils.rs  lib.rs  push_buffer.rs  resource_loader.rs  resource_loader_hydrate.rs  schema.rs  schema_codegen.rs
rafx-base/: Cargo.toml
rafx-base/src/: atomic_once_cell.rs  atomic_once_cell_array.rs  atomic_once_cell_stack.rs  b3f.rs  decimal.rs  lib.rs  memory.rs  offsetof.rs  owned_pool.rs  resource_map.rs  resource_ref_map.rs  trust_cell.rs
rafx-framework/: Cargo.toml  compile_shaders.bat  compile_shaders.sh
rafx-framework/cooked_shaders/: util_fill_buffer.comp.cookedshaderpackage
rafx-framework/glsl/: util_fill_buffer.comp
rafx-framework/src/: lib.rs
rafx-nodes/: Cargo.toml
rafx-nodes/src/: lib.rs  macro_render_feature.rs  render_nodes.rs  render_views.rs  submit_nodes.rs
rafx-plugins/: Cargo.toml  compile_shaders.bat  compile_shaders.sh
rafx-plugins/glsl/: bloom_combine.frag  egui.frag  imgui.glsl  luma_average_histogram.comp  luma_build_histogram.comp  luma_histogram_types.glsl  mesh_pbr_uniform.glsl  mesh_pbr_vert.glsl  tonemapping.glsl  tonemapping_bgfx.glsl
rafx-plugins/rafx-plugins-shaders/: Cargo.toml  compile_shaders.bat  compile_shaders.sh
rafx-plugins/schema/: blender_anim.json  font.json  ldtk.json  mesh_adv.json
rafx-plugins/src/: components.rs  lib.rs  schema.rs  schema_codegen.rs
rafx-renderer/: Cargo.toml
rafx-renderer/src/: daemon.rs  lib.rs  main_view_render_resource.rs  render_feature_plugin.rs  render_frame_job.rs  render_graph_generator.rs  render_thread.rs  renderer.rs  renderer_asset_plugin.rs  renderer_builder.rs  renderer_pipeline_plugin.rs  renderer_plugin.rs  renderer_thread_pool.rs  renderer_thread_pool_none.rs  swapchain_handling.rs  swapchain_render_resource.rs  swapchain_resources.rs  time_render_resource.rs  viewports_resource.rs
rafx-resources/: Cargo.toml
rafx-resources/src/: lib.rs
rafx-shader-processor/: Cargo.toml
rafx-shader-processor/src/: codegen.rs  cook.rs  include.rs  lib.rs  main.rs  parse_declarations.rs  parse_source.rs  reflect.rs  shader_types.rs
rafx-visibility/: Cargo.toml
rafx-visibility/src/: dynamic_visibility_node_set.rs  lib.rs  polygon_soup.rs  projection.rs  static_visibility_node_set.rs  view_frustum.rs  visibility_nodes.rs  visibility_object.rs  visibility_world.rs  visible_bounds.rs
rafx/examples/: nodes_api_design.rs  triangle.rs  triangle_graph.rs
rafx/src/: lib.rs
renderer/: Cargo.toml
renderer-assets/: Cargo.toml
renderer-assets/src/: asset_storage.rs  image_utils.rs  lib.rs  push_buffer.rs  resource_loader.rs
renderer-ext/: Cargo.toml
renderer-ext/shaders/: compile.sh  imgui.frag.spv  imgui.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  sprite.vert.spv  texture.frag  texture.frag.spv  texture.vert.spv  texture_many_sets.frag  texture_many_sets.frag.spv  texture_push_constant.frag  texture_push_constant.frag.spv
renderer-ext/src/: asset_lookup.rs  asset_resource.rs  asset_storage.rs  asset_uploader.rs  assets_init.rs  game_renderer.rs  gltf_importer.rs  image_importer.rs  image_utils.rs  lib.rs  pipeline_description.rs  pipeline_manager.rs  push_buffer.rs  queue_manager.rs  renderer_init.rs  resource_manager.rs  time.rs  upload.rs  vulkan_uploader.rs
renderer-profile/: Cargo.toml
renderer-profile/src/: lib.rs
renderer-resources/: Cargo.toml
renderer-resources/src/: assets_init.rs  lib.rs  resource_load_handler.rs  resource_loader.rs  resource_manager_init.rs
renderer-sdl2/: Cargo.toml
renderer-sdl2/src/: lib.rs
renderer-shell-vulkan/: Cargo.toml
renderer-shell-vulkan-sdl2/: Cargo.toml
renderer-shell-vulkan-sdl2/src/: lib.rs
renderer-shell-vulkan/src/: alignment.rs  (+19 more)
renderer-visibility/: Cargo.toml
shader-processor/: Cargo.toml  compile.sh  test.frag  test.spv  test_include.glsl
(+2035 files in other folders)
