[workspace]
members = [
    "rafx",
    "rafx-base",
    "rafx-api",
    "rafx-framework",
    "rafx-shader-processor",
    "rafx-renderer",
    "rafx-visibility",
    "rafx-assets",
    "rafx-plugins",
    "demo",
    "demo-schema",
    "demo-editor",
    "demo-web"
]

exclude = [

]

resolver = "2"

# Example of overriding a single crate. Doesn't affect dependencies though so it's of limited value
#[profile.dev.package.image]
#opt-level = 2

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

# faster macOS builds
[profile.dev]
split-debuginfo = "unpacked"

# Required for https://github.com/gltf-rs/gltf/pull/288
#[patch.crates-io]
#gltf = { path = "gltf" }

[patch.crates-io]
#raw-gl-context = { git = "https://github.com/aclysma/raw-gl-context.git", branch = "rafx" }
#basis-universal = { path = "../basis-universal-rs/basis-universal" }
#basis-universal-sys = { path = "../basis-universal-rs/basis-universal-sys" }

#spirv_cross = { path = "../spirv_cross/spirv_cross" }
spirv_cross = { git = "https://github.com/aclysma/spirv_cross.git", branch = "rafx-support" }
