[workspace]
members = [
    "rafx",
    "rafx-base",
    "rafx-api",
    "rafx-framework",
    "rafx-shader-processor",
    "rafx-renderer",
    "rafx-visibility",
    "rafx-assets",
    "rafx-plugins",
    "demo",
    "demo-editor",
    "demo-web"
]

exclude = [

]

resolver = "2"

# Optimize external crates by default, even in debug
[profile.dev.package."*"]
opt-level = 2

# Don't optimize hydrate packages in dev
[profile.dev.package.hydrate-loader]
opt-level = 0
[profile.dev.package.hydrate-base]
opt-level = 0

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

# faster macOS builds
[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
#raw-gl-context = { git = "https://github.com/aclysma/raw-gl-context.git", branch = "rafx" }
#basis-universal = { path = "../basis-universal-rs/basis-universal" }
#basis-universal-sys = { path = "../basis-universal-rs/basis-universal-sys" }

#spirv_cross = { path = "../spirv_cross/spirv_cross" }
#spirv_cross = { git = "https://github.com/aclysma/spirv_cross.git", branch = "rafx-support" }
#spirv_cross = { path = "../aclysma_spirv_cross/spirv_cross", package = "aclysma_spirv_cross" }

#hydrate-base = { path = "../hydrate/hydrate-base" }
#hydrate-schema = { path = "../hydrate/hydrate-schema" }
#hydrate-data = { path = "../hydrate/hydrate-data" }
#hydrate-model = { path = "../hydrate/hydrate-model" }
#hydrate-pipeline = { path = "../hydrate/hydrate-pipeline" }
#hydrate-editor = { path = "../hydrate/hydrate-editor" }
#hydrate-loader = { path = "../hydrate/hydrate-loader" }
#hydrate-codegen = { path = "../hydrate/hydrate-codegen" }
#hydrate = { path = "../hydrate/hydrate" }


