[package]
name = "demo-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate = { path = "../../hydrate/hydrate" }
rafx = { path = "../rafx", features = ["renderer", "basis-universal", "ddsfile"] }
rafx-plugins = { path = "../rafx-plugins" }

log = "0.4"
env_logger = "0.6"