[package]
name = "demo-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate = { path = "../../hydrate/hydrate" }
rafx = { path = "../rafx", features = ["renderer", "basis-universal", "dds"] }
rafx-plugins = { path = "../rafx-plugins", features = ["legion", "egui", "egui-winit", "modern-pipeline", "meshopt"] }

log = "0.4"
env_logger = "0.6"

profiling = "1.0.1"

[features]
default = [
    # Profiling options
    #"profile-with-puffin",
    #"profile-with-optick",
    "profile-with-tracy",
    #"profile-with-tracy-memory", # Cannot be enabled with "stats_alloc".
    #"profile-with-superluminal"
]

profile-with-optick = [
    "profiling/profile-with-optick",
]
profile-with-superluminal = [
    "profiling/profile-with-superluminal",
]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-memory = [
    "profiling/profile-with-tracy",
    "profile-with-tracy"
]