[package]
name = "demo"
version = "0.0.7"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafx = { path = "../rafx", features = ["renderer"] }
shaders = { path = "shaders" }

distill = { version = "=0.0.2", features = ["serde_importers"] }
uuid = "0.8"
type-uuid = "0.1"

sdl2 = { version = "0.34", features = ["raw-window-handle"] }
imgui = { version = "0.4", optional = true }
imgui-sdl2 = { version = "0.11.0", optional = true }
legion = { version = "0.4.0", default-features = false, features = ["serialize"] }

image = "0.23.12"
image2 = { version = "0.11", features = [ "ser" ] }
# for https://github.com/gltf-rs/gltf/pull/288
#gltf = "0.15"
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "e49aef5ee7b40c2c8f8a50efaed36b97bbb52bd4" }
fontdue = "0.4"
ttf-parser = "0.8.3"
rectangle-pack = "0.2.0"

log = "0.4"
env_logger = "0.6"

glam = { version = "0.8.6", features = [ "serde" ] }

arrayvec = "0.5"
crossbeam-channel = "0.5"
fnv = "1.0"
rand = "0.7.3"
pcg_rand = "0.11.1"
itertools = "0.8"
mopa = "0.2"
lazy_static = "1"
structopt = "0.3"

serde = "1"
serde_bytes = "0.11"
bincode = "1.3.1"
ron = "0.6"

puffin-imgui = { version = "0.4.0", optional = true }

profiling = "0.1.4"

[features]
default = [
    "sdl2-bundled",
    "sdl2-static-link",
    "use-imgui",
    "profile-with-puffin",
    #"profile-with-optick",
    #"profile-with-tracy",
    #"profile-with-tracy-memory",
    #"profile-with-superluminal"
]
use-imgui = ["imgui", "imgui-sdl2"]
rafx-empty = ["rafx/rafx-empty"]
rafx-vulkan = ["rafx/rafx-vulkan"]
rafx-metal = ["rafx/rafx-metal"]
sdl2-bundled = ["sdl2/bundled"]
sdl2-static-link = ["sdl2/static-link"]
static-vulkan = ["rafx/static-vulkan"]
profile-with-puffin = [
    "use-imgui",
    "profiling/profile-with-puffin",
    "rafx/profile-with-puffin",
    "puffin-imgui"
]
profile-with-optick = [
    "profiling/profile-with-optick",
    "rafx/profile-with-optick",
]
profile-with-superluminal = [
    "profiling/profile-with-superluminal",
    "rafx/profile-with-superluminal",
]
profile-with-tracy = [
    "profiling/profile-with-tracy",
    "rafx/profile-with-tracy",
]
profile-with-tracy-memory = [
    "profiling/profile-with-tracy",
    "profile-with-tracy"
]
