[package]
name = "demo"
version = "0.0.13"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rafx = { path = "../rafx", features = ["renderer", "basis-universal"] }
shaders = { path = "shaders" }
distill = { version = "=0.0.3", features = ["serde_importers"] }
uuid = "0.8"
type-uuid = "0.1"
sdl2 = { version = "0.34", features = ["raw-window-handle"] }
imgui = { version = "0.7", optional = true }
imgui-sdl2 = { version = "0.14.0", optional = true }
egui = { version = "0.12", features = ["default_fonts"], optional = true }
copypasta = { version = "0.7", optional = true }
puffin_egui = { version = "0.2.0", optional = true }
legion = { version = "0.4.0", default-features = false, features = ["serialize"] }
image = "0.23.12"

# GLTF asset type
# for https://github.com/gltf-rs/gltf/pull/288
gltf = "0.16"

# Font asset type
fontdue = "0.4"
ttf-parser = "0.8.3"
rectangle-pack = "0.2.0"

# LDTK asset type
ldtk_rust = "0.4"
serde_json = "1.0"

log = "0.4"
glam = { version = "0.13.1", features = [ "serde" ] }
arrayvec = "0.5"
crossbeam-channel = "0.5"
fnv = "1.0"
rand = "0.8"
pcg_rand = "0.13"
itertools = "0.8"
mopa = "0.2"
lazy_static = "1"
structopt = "0.3"
serde = "1"
serde_bytes = "0.11"
bincode = "1.3.1"
ron = "0.6"
profiling = "1.0.1"
stats_alloc = { version = "0.1.8", optional = true }
bevy_tasks = "0.5.0"
raw-window-handle = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.6"
winit = { version = "0.24", features = [] }

[features]
default = [
    "sdl2-bundled",
    "sdl2-static-link",
    "profile-with-puffin",
    "use-egui"
    #"stats_alloc", # Cannot be enabled with "profile-with-tracy-memory". Will run renderer / game loop single-threaded.
    #"profile-with-optick",
    #"profile-with-tracy",
    #"profile-with-tracy-memory", # Cannot be enabled with "stats_alloc".
    #"profile-with-superluminal"
]
use-egui = ["egui", "copypasta"]
basis-universal = ["rafx/basis-universal"]
use-imgui = ["imgui", "imgui-sdl2"]
rafx-empty = ["rafx/rafx-empty"]
rafx-vulkan = ["rafx/rafx-vulkan"]
rafx-metal = ["rafx/rafx-metal"]
rafx-gles2 = ["rafx/rafx-gles2"]
rafx-gles3 = ["rafx/rafx-gles3"]
sdl2-bundled = ["sdl2/bundled"]
sdl2-static-link = ["sdl2/static-link"]
static-vulkan = ["rafx/static-vulkan"]
profile-with-puffin = [
    "profiling/profile-with-puffin",
    "puffin_egui",
    "egui"
]
profile-with-optick = [
    "profiling/profile-with-optick",
]
profile-with-superluminal = [
    "profiling/profile-with-superluminal",
]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-memory = [
    "profiling/profile-with-tracy",
    "profile-with-tracy"
]
