[package]
name = "rafx-api-vulkan-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = ">=0.30"
ash-window = "0.5.0"
sdl2 = { version = ">=0.33", features = ["raw-window-handle"] }
raw-window-handle = "0.3"

rafx-api-vulkan = { version = "0.1", path = "../rafx-api-vulkan" }

log = "0.4"