[package]
name = "rafx-assets"
version = "0.0.14"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = [
    "game-development",
    "game-engines",
    "graphics",
    "multimedia",
    "rendering::engine"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rafx-api = { version = "0.0.14", path = "../rafx-api" }
rafx-base = { version = "0.0.14", path = "../rafx-base" }
rafx-framework = { version = "0.0.14", path = "../rafx-framework" }
distill = { version = "=0.0.3", features = ["serde_importers", "distill-daemon"] }
basis-universal = { version = "0.1.1", optional = true }
type-uuid = "0.1"
uuid = "0.8"
image = "0.23.12"
arrayvec = "0.5"
crossbeam-channel = "0.5"
fnv = "1.0"
log = "0.4"
downcast-rs = "1.2.0"
futures-lite = "1.3.0"
serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"
bincode = "1.3.1"
ron = "0.6"
profiling = "1.0.1"

[dev-dependencies]
env_logger = "0.6"

