[package]
name = "rafx-assets"
version = "0.0.15"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = [
    "game-development",
    "game-engines",
    "graphics",
    "multimedia",
    "rendering::engine"
]

[features]
rafx-empty = ["rafx-framework/rafx-empty"]
rafx-dx12 = ["rafx-framework/rafx-dx12"]
rafx-vulkan = ["rafx-framework/rafx-vulkan"]
rafx-metal = ["rafx-framework/rafx-metal"]
rafx-gles2 = ["rafx-framework/rafx-gles2"]
rafx-gles3 = ["rafx-framework/rafx-gles3"]
dds = ["ddsfile", "image_dds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rafx-api = { version = "0.0.15", path = "../rafx-api" }
rafx-base = { version = "0.0.15", path = "../rafx-base" }
rafx-framework = { version = "0.0.15", path = "../rafx-framework" }

hydrate-pipeline = { path = "../../hydrate/hydrate-pipeline" }
hydrate-data = { path = "../../hydrate/hydrate-data" }
hydrate-loader = { path = "../../hydrate/hydrate-loader" }
hydrate-base = { path = "../../hydrate/hydrate-base" }

basis-universal = { version = "0.1.1", optional = true }
type-uuid = "0.1"
uuid = "0.8"
image = { version = "0.24.5", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp"] }
ddsfile = { version = "0.4.0", optional = true }
image_dds = { version = "0.3.0", optional = true, default-features = false, features = ["ddsfile", "image", "decode", "bcndecode-sys"]}
arrayvec = "0.5"
crossbeam-channel = "0.5"
fnv = "1.0"
log = "0.4"
downcast-rs = "1.2.0"
futures-lite = "1.3.0"
serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"
bincode = "1.3.1"
ron = "0.6"
profiling = "1.0.1"

[dev-dependencies]
env_logger = "0.6"

