[package]
name = "rafx-base"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fnv = "1.0"
crossbeam-channel = "0.5"
downcast-rs = "1.2.0"