[package]
name = "rafx-framework"
version = "0.0.12"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafx-api = { version = "=0.0.12", path = "../rafx-api", features = ["serde-support"] }
rafx-base = { version = "=0.0.12", path = "../rafx-base" }
rafx-visibility = { version = "=0.0.12", path = "../rafx-visibility" }

#rafx-nodes = { version = "=0.0.7", path = "../rafx-nodes" }

arrayvec = "0.5"
bitflags = "1.2"
crossbeam-channel = "0.5"
log = "0.4"
fnv = "1.0"
profiling = "1.0"
serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"
glam = { version = "0.13.1", features = [ "serde" ] }
parking_lot = "0.11.1"
slotmap = "1.0.2"

[features]
default = []
rafx-vulkan = ["rafx-api/rafx-vulkan"]
rafx-metal = ["rafx-api/rafx-metal"]
static-vulkan = ["rafx-api/static-vulkan"]

