[package]
name = "rafx-framework"
version = "0.0.14"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafx-api = { version = "0.0.14", path = "../rafx-api", features = ["serde-support"] }
rafx-base = { version = "0.0.14", path = "../rafx-base" }
rafx-visibility = { version = "0.0.14", path = "../rafx-visibility" }

#rafx-nodes = { version = "=0.0.7", path = "../rafx-nodes" }

arrayvec = "0.5"
bitflags = "1.2"
crossbeam-channel = "0.5"
log = "0.4"
fnv = "1.0"
profiling = "1.0.1"
serde = { version = "1", features = ["serde_derive"] }
serde_bytes = "0.11"
glam = { version = "0.13.1", features = [ "serde" ] }
parking_lot = "0.11.1"
slotmap = "1.0.2"
downcast-rs = "1.2.0"

[features]
default = []
rafx-vulkan = ["rafx-api/rafx-vulkan"]
rafx-metal = ["rafx-api/rafx-metal"]
rafx-gles2 = ["rafx-api/rafx-gles2"]
rafx-gles3 = ["rafx-api/rafx-gles3"]
static-vulkan = ["rafx-api/static-vulkan"]

