[package]
name = "rafx-nodes"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
glam = "0.8.6"
fnv = "1.0"

rafx-base = { version = "0.0.1", path = "../rafx-base" }
rafx-api = { version = "0.0.1", path = "../rafx-api" }