[package]
name = "rafx-renderer"
version = "0.0.12"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Rendering framework built on an extensible asset pipeline"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/rafx"
homepage = "https://github.com/aclysma/rafx"
keywords = ["game", "rendering", "graphics"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine"]

[dependencies]
rafx-api = { version = "=0.0.12", path = "../rafx-api" }
rafx-base = { version = "=0.0.12", path = "../rafx-base" }
rafx-framework = { version = "=0.0.12", path = "../rafx-framework" }
rafx-assets = { version = "=0.0.12", path = "../rafx-assets" }
rafx-visibility = { version = "=0.0.12", path = "../rafx-visibility" }

glam = { version = "0.13.1", features = [ "serde" ] }
crossbeam-channel = "0.5"
log = "0.4"
profiling = "1.0"

[features]
no-render-thread = []
